# community-token

./: Cargo.toml  README.md  exchange.md  rdme.html
.github/workflows/: main.yml
act-wallet/: README.md  index.html  package.json
act-wallet/src/: main.ts  styles.css
act-wallet/src-tauri/: Cargo.toml  tauri.conf.json
act-wallet/src-tauri/src/: lib.rs  main.rs
docs/: dist.red  magnitude-pointers.md  token.md
src/: lib.rs
token/: Cargo.toml
token/docs/: ACT Exchange.drawio  exchange.md  token.md
token/src/: act.rs  lib.rs  wallet.rs
