[package]
name = "ant-act"
version = "0.0.1"
description = "Autonomi Community Token"
edition = "2021"

[dependencies]
futures = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ruint = "1"
sn_bls_ckd = "0.2"
sn_curv = { version = "0.10", default-features = false, features = ["num-bigint"] }
tracing = "*"
ant-logging = "*"
autonomi = { version = "0.4.6" }

[dev-dependencies]
tokio = "1"
hex = "0.4"
