[package]
name = "ant-act"
version = "0.0.2"
description = "Autonomi Community Token"
authors = ["loziniak"]
license-file = "../LICENSE"
repository = "https://github.com/safenetforum-community/community-token"
keywords = ["autonomi", "p2p", "token", "cryptocurrency", "erc20"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"

[dependencies]
futures = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ruint = "1"
sn_bls_ckd = "0.2"
sn_curv = { version = "0.10", default-features = false, features = ["num-bigint"] }
#ant-networking = "0.3"
autonomi = { version = "0.5.1" }
rmp-serde = "1.3"

[dev-dependencies]
tokio = "1"
hex = "0.4"
tracing = "0.1"
ant-logging = "0.2"
