[package]
name = "act-wallet"
version = "0.0.2"
description = "Autonomi Community Token Wallet App (alpha)"
authors = ["loziniak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "act_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures = "*"
hex = "0.4"
ruint = "*"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sn_bls_ckd = "0.2"
sn_curv = { version = "0.10", default-features = false, features = ["num-bigint"] }
autonomi = "0.5.1"
ant-act = { version = "0.0.2", path = "../../token" }
#ant-act = { version = "0.0.2", git = "ssh://git@github.com/safenetforum-community/community-token.git" }
